--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      background-color: #7752cd;
+      background-color: #7752cdc6;
       border-radius: 8px;
       color: rgb(255, 255, 255);
     }
