--- a/index.html
+++ b/index.html
@@ -232,13 +232,13 @@
       <h2>INQUIRY</h2>
       <form>
         <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
+        <input type="text" id="name" name="name" required placeholder="NAME">
 
         <label for="number">Number:</label>
-        <input type="number" id="number" name="number" required>
+        <input type="number" id="number" name="number" required placeholder="PHONE NUMBER">
 
         <label for="email">E-mail:</label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="email" required placeholder="EMAIL">
 
         <label for="message">Message:</label>
         <textarea id="message" name="inquiry" rows="4" placeholder="Enter your inquiry" required></textarea>
