--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
   <main>
     <!-- Home Section -->
     <div id="home" class="box">
-      <img src="Screenshot 2025-02-23 103359.png" alt="Profile Image">
+      <img src="PROFILE.jpg" alt="Profile Image">
       <h2>HARENDRA SINGH RAWAT</h2>
     </div>
 
